began creating error checkers in lobby. fixed buttons on home page on mobile. began fixing error where fakers name is not displayed when  the game is over

--- a/client/src/stylesheets/Question-page.css
+++ b/client/src/stylesheets/Question-page.css
@@ -66,3 +66,9 @@
     height: 61.7em;
   }
 }
+
+@media screen and (min-height: 1000px){
+  .question-footer{
+    height: 80em;
+  }
+}
