--- a/client/src/stylesheets/non-host-pick-category.css
+++ b/client/src/stylesheets/non-host-pick-category.css
@@ -6,6 +6,7 @@
   height: 30em;
   background-color: white;
   word-break: break-word;
+  text-align: center;
 }
 
 .host-is-choosing-category{
@@ -114,6 +115,9 @@
   .non-host-category-body{
     height: 15em;
   }
+  .non-host-cat-footer{
+    height: 30em;
+  }
 }
 
 @media screen and (min-width: 800px){
@@ -135,5 +139,11 @@
 @media screen and (min-width: 2000px){
   .non-host-cat-footer{
     height: 200em;
+  }
+}
+
+@media screen and (min-height: 1000px){
+  .non-host-category-body{
+    height: 30em;
   }
 }
